css_dark.css
/* ... */
.activeUpload__form {
	background-color: transparent !important;
}
.suggestedTags {
	background-color: black !important;
}
.suggestedTags__listItem.selected {
	background-color: #ff7000 !important;
}
.tagInput__wrapper {
	background-color: transparent !important;
}
.sc-button-dropdown:focus:not(.sc-button-disabled):not(:disabled) {
	box-shadow: 0 0 0 4px #353535 !important;
}
.g-upsell-container {
	background: transparent !important;
}
.ui-datepicker {
	background: #212121 !important;
}
.activeUpload__shareContainer {
	background-color: transparent !important;
}
.audibleEditForm__form {
	background-color: transparent !important;
}
.audibleEditForm__audio {
	background-color: #191919 !important;
}
.commentPopover.darkText .commentPopover__body {
	color: #8d8d8d !important;
}
.paging-eof {
	filter: invert(90.6%) !important;
}
/* Makes logo at the bottom of pages dark */
.newItemBadge.newItems__some {
	border: none !important;
}
/* Removes ugly border from notification icon alert (1/2) */
.newItemBadge {
	width: 120% !important;
	height: 120% !important;
}
/* Removes ugly border from notification icon alert (2/2) */
.dashbox__titleLine {
	color: #fff !important;
}
/* Fixes dark text in dashbox (1/2) */
.dashbox__bodyLine {
	color: #ccc !important;
}
/* Fixes dark text in dashbox (2/2) */
.truncatedUserDescription.m-overflow.m-collapsed .truncatedUserDescription__wrapper::after {
	background: linear-gradient( rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1) ) !important;
}
/* Gradient in truncated user description */
.visualSound__wrapper {
	background-color: #161719 !important;
}
/* Old style album layout interact area */
.readMoreTile__countWrapper {
	background-color: #e6e6e6 !important;
}
/* Fixes blur behind View all button as the invert filter breaks it */
.sc-button-small {
	font-weight: 500 !important;
}
/* Make font on small buttons thicker, or its too thin */
.callout__bubble {
	background-color: #292929 !important;
}
/* Fixes informational pop-ups shown to new users (1/2) */
.callout__bubble::before {
	background-color: black !important;
}
/* Fixes informational pop-ups shown to new users (2/2) */
.quotaMeterWrapper {
	background-color: unset !important;
}
/* Fixes free upload limit background */
.compactTrackList__moreLink:focus, .compactTrackList__moreLink:hover {
	background-color: black !important;
	color: white !important;
}
/* Fixes stream playlist expand btn */
.commentFormDisabled {
	background-color: black !important;
}
/* Fixes background of Comments Disabled box */
.streamHTUpsell {
	background-color: #292929 !important;
}
/* In-stream banners */
.emptyNetworkPage__image {
	filter: invert(80%) !important;
}
/* Fix empty profile page */
.sc-font-body {
	font-weight: 500 !important;
}
/* Make body font slightly thicker for readability */
.featuredProfiles__item h3 {
	filter: invert(100%) !important;
}
/* Fix featured profiles text 1/2 */
.featuredProfiles__list .sc-status-icon {
	filter: invert(100) !important;
}
/* Fix featured profiles text 2/2 */
.sc-button-delete::before {
	filter: invert(100%) !important;
}
/* Fix delete playlist button */
.sc-button-small.sc-button-lightfg:before {
	filter: unset !important;
}
/* Fix playlist preview song buttons */
/* Post-fork updates */
.compactTrackList__item .sc-border-light-bottom, .compactTrackList__moreLink.sc-link-light.sc-border-light {
	border: none !important;
}
/* Fix double border on playlist more button */
.compactTrackList__moreLink.sc-link-light.sc-border-light {
	border-top: 1px solid #333 !important;
}
/* Fix playlists to use gray borders rather than orange */
.sc-border-light {
	border: 1px solid #333 !important;
}
/* Fix all occurrences of orange border with gray border */
.sc-border-light-right {
	border-right: 1px solid #333 !important;
}
/* Fix stream list containers to have a gray border rather than orange */
.sc-border-light-bottom {
	border-bottom: 1px solid #333 !important;
}
/* Fix stream sidebar module headers to have a gray bottom border rather than orange */
.sc-button-small.sc-button-follow:before {
	filter: invert(1);
}
/* Fix track view sidebar follow button icon to be white instead of black */
.header {
	border-bottom: 1px solid #333;
}
.playControls__inner, .playControls__bg {
	border-top: 1px solid #333 !important;
}
.sc-type-light {
	color: #999 !important;
}
.soundTitle__title {
	font-weight: 400 !important;
}
.soundTitle.streamContext .soundTitle__secondary {
	font-size: 13px !important;
}
.streamHTUpsell {
	display: none;
}
a.trackItem__trackTitle.sc-link-dark.sc-font-light {
	color: #999;
}
.show .header__navWrapper, .show .header__right, .show .header__search, .sc-classic .playControls__soundBadge {
	margin-right: 20px;
}
.l-container.l-content {
	padding-top: 46px;
}
@media (max-width: 1079px) {
	.sc-classic .l-container {
	width: auto !important;
	}
}
.sc-classic .streamHTUpsell {
	display: none !important;
}
.header__goUpsell_side_by_side_experience,
.header__proUpsell_side_by_side_experience {
	display: none;
}

